# hladinomer-studna-scripty

./: CODEOWNERS  LICENSE  README.md  library.properties
.github/workflows/: codeql-analysis.yml
MATLAB/: HCSR04.m  JSN04T.m
Postman/: Water Level monitor.postman_collection.json
docs/: datasheet.html  index.html  json_client.html  kontakt.html  sitemap.xml  tft_node.html  zapojenie.html  zrazkomer.html
docs/AR/: CAMERA.html  CAMERA.ino  index.html  netlify-function.js  test.html  test2.html
docs/DEMO/: index.html
docs/DEMO_en/: index.html
docs/MATLAB/: HCSR04.m  JSN04T.m
docs/QR/: Tlacidla_3D_animacia.html  index.html  test.html
docs/bn/: index.html  kontakt.html  zapojenie.html  zrazkomer.html
docs/br/: index.html  kontakt.html  zapojenie.html  zrazkomer.html
docs/da/: index.html  json_client.html  zapojenie.html
docs/de/: index.html  json_client.html  zapojenie.html
docs/en/: datasheet.html  index.html  json_client.html  kontakt.html  zapojenie.html  zrazkomer.html
docs/es/: index.html  zapojenie.html
docs/et/: index.html  json_client.html  zapojenie.html
docs/fi/: index.html  json_client.html  kontakt.html  zapojenie.html  (+1 more)
examples/: HTTP_RG-11.ino  README.md  ethernet-w5100-arduino.ino  ethernet-w5500-arduino.ino  gsm-arduino.ino  http-esp32.ino  http-esp8266.ino  https-esp32.ino  https-esp8266.ino  lora-arduino.ino  sigfox-arduino.ino  tester-esp32-esp8266.ino
examples/Hladinomer/HTTPS/https_request/main/: CMakeLists.txt  https_request_example_main.c
scheme/: STUDNA.dxf  STUDNA.sch  STUDNA.scr  studna_V2.sch
src/: NewPing.cpp
(+323 files in other folders)
